[tool.poetry]
name = "ctxt2d"
version = "0.1.0"
description = "Compares text in a file to reference/glossary/key-items/dictionary file."
authors = ["davidprush <davidprush@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.8.0"
pyupgrade = "^2.38.0"
mypy = "^0.971"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
